--- a/src/style/Home.module.css
+++ b/src/style/Home.module.css
@@ -1,3 +1,8 @@
+* {
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+}
+
 h1 {
     text-align: center;
 }
@@ -17,5 +22,5 @@ h1 {
     border-radius: 10px;
     padding: 10px 30px;
     margin: 10px;
-    background-color: rgb(183, 183, 183);
+    background-color: rgb(220, 220, 220);
 }
