--- a/src/style/Navbar.module.css
+++ b/src/style/Navbar.module.css
@@ -4,13 +4,16 @@
     margin: 0px;
     height: 50px;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
 }
 
 .textMenu {
     padding: 20px;
-    color: yellow;
+    margin-left: 10px;
+    color: rgb(255, 255, 165);
     font-size: 20px;
     text-decoration: none;
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
 }
